this works for now

--- a/autodocs/config/gitlab-autodocs.service
+++ b/autodocs/config/gitlab-autodocs.service
@@ -1,11 +1,10 @@
 [Unit]
-Description=adsy autodocs
+Description=adsy gitlab autodocs
 After=network.target
 
 [Service]
-User=doc-sync
 Type=simple
-ExecStart=gitlab-autodocs /etc/gitlab-autodocs.yaml
+ExecStart=/usr/local/bin/gitlab-autodocs /etc/gitlab-autodocs.yaml
 
 [Install]
 WantedBy=multi-user.target
