--- a/autodocs/config/gitlab-autodocs.yaml
+++ b/autodocs/config/gitlab-autodocs.yaml
@@ -1,6 +1,8 @@
 autodocs:
   port: 8083
-
+  allowed_paths:
+    - /var/www/html
+    
 gitlab:
   url: https://gitlab.example.com
   token: jhgUIJHG239kjhfd89723hoishfsegsd
